+ Restructed component parameters adding unused category layout selector and unused parameters for displaying tags/favs via category view, which is already implemented but not 100% tested

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -799,22 +799,7 @@ FLEXI_FIELD_USE_BUTTONS="Use buttons"
 FLEXI_FIELD_BUTTONS="Buttons"
 FLEXI_FIELD_LINKS="Links"
 
-FLEXI_FIELD_ELEMENTS_CASCADABLE_DESC="
-<br/> SQL:
-<br/> &nbsp;  SELECT ... AS value, ... AS text, ... AS image, ... AS valgrp ...
-
-<br/>
-<br/> Element list:
-<br/> &nbsp; value1:<span />:label1:<span />:image1:<span />:valgrp%%
-<br/> &nbsp; value2:<span />:label2:<span />:image2:<span />:valgrp%% ...
-
-<br/>
-<br/> <b>NOTE 1</b>: <br/>
-- images are only used by radio/checkbox image field types <br/>
-- 'valgrp' is used when cascading changes = value of a master field<br/>
-- when adding 'valgrp', then enter 'image' too, e.g. noimage.png <br/>
-
-<br/><b>NOTE 2</b>: The names will be passed through JText ... to allow multilanguage support (You can add them to your language files)"
+FLEXI_FIELD_ELEMENTS_CASCADABLE_DESC="<br/> SQL: <br/> &nbsp;  SELECT ... AS value, ... AS text, ... AS image, ... AS valgrp ... <br/><br/> Element list: <br/> &nbsp; value1:<span />:label1:<span />:image1:<span />:valgrp%% <br/> &nbsp; value2:<span />:label2:<span />:image2:<span />:valgrp%% ... <br/><br/> <b>NOTE 1</b>: <br/> - images are only used by radio/checkbox image field types <br/> - 'valgrp' is used when cascading changes = value of a master field<br/> - when adding 'valgrp', then enter 'image' too, e.g. noimage.png <br/><br/><b>NOTE 2</b>: The names will be passed through JText ... to allow multilanguage support (You can add them to your language files)"
 FLEXI_FIELD_ELEMENTS_CASCADABLE="Field elements"
 FLEXI_FIELD_ELEMENTS_DESC="Field elements. The syntax is the following:<br/> value1:<span />:label1:<span />:image1%% &nbsp; value2:<span />:label2:<span />:image2%% &nbsp;  ... <br/><br/><b>NOTE 1</b>: (images are only applicable for the radio/checkbox image field types) <br/><br/><b>NOTE 2</b>: The names will be passed through JText ... to allow multilanguage support (You can add them to your language files)"
 FLEXI_FIELD_ELEMENTS="Field elements"
@@ -1768,12 +1753,13 @@ FLEXI_MODIFY_ORIGINAL_CONTENT_ASSOC="Original translated content"
 
 FLEXI_FAST_APPLY="Fast apply"
 FLEXI_APPLY="Apply"
+
 FLEXI_NON_NATIVE_TRANSLATIONS="NON native Item Translations (Translate CORE fields only) <br/> <small>A 3rd party tool, Joom!Fish (J1.5) / Falang (J2.5/J3.0+) will translate my content items (articles)</small>"
-FLEXI_MENU_EDIT_JOOMFISH_TRANSLATIONS="Edit Joom!Fish Translations"
-FLEXI_MENU_EDIT_FALANG_TRANSLATIONS="Edit Falang Translations"
-FLEXI_MENU_EDIT_JOOMFISH_TRANSLATIONS_DESC="You can edit Joom!Fish item translations using the --item edit form--. <br /><br /><b>NOTE:</b> <br />(a) this will allow to edit fields: title, alias, description, metadesc, metakey (other Joomfish fields like: attributes and publish_up/publish_down will be forced to common values)<br/>(b) A warning will be displayed if you disable this option but Joom!Fish Translations are detected.<br/><br/><b>NOTE:</b> It is recommended that you use an item per translation, and then associate items together via enabling the 'Translation Groups' parameter, especially, if you need to translate all fields."
+FLEXI_NATIVE_TRANSLATIONS="Joomla/FLEXIcontent native Item Translations (Translate items fully) <br/> <small>with associations of item translations via FLEXIcontent or via J3.0 article associations</small>"
+
 FLEXI_MENU_EDIT_FALANG_TRANSLATIONS="Edit Falang Translations"
 FLEXI_MENU_EDIT_FALANG_TRANSLATIONS_DESC="You can edit Falang item translations using the --item edit form--. <br /><br /><b>NOTE:</b> <br />(a) this will allow to edit fields: title, alias, description, metadesc, metakey (other Falang fields like: attributes and publish_up/publish_down will be forced to common values)<br/>(b) A warning will be displayed if you disable this option but Falang Translations are detected.<br/><br/><b>NOTE:</b> It is recommended that you use an item per translation, and then associate items together via enabling the 'Translation Groups' parameter, especially, if you need to translate all fields."
+
 FLEXI_NO_DISABLE_WARNING="No, disable warning"
 
 FLEXI_SCHEDULED_FOR_PUBLICATION="Scheduled for publication"
@@ -2290,9 +2276,7 @@ FLEXI_USE_VIEW_DEFAULT="Use Default of each View"
 FLEXI_ORDER_CONFIGURED_ORDER_CAT="Category 's ordering attribute"
 
 ; some configuration group titles
-FLEXI_ITEM_LIST_CREATION_CONF="Item list creation <br/> <small>views: (category,tags,favourites, etc)</small>"
-FLEXI_DIRECTORY_VIEW_CONF="Directory view <br/> <small>(displays category lists)</small>"
-FLEXI_CATEGORY_VIEW_CONF="Category view <br/> <small>(specific to this view)</small>"
+FLEXI_DIRECTORY_VIEW_CONF="Directory view <br/><small>(displays category lists)</small>"
 FLEXI_TAGS_VIEW_CONF="Tags view"
 FLEXI_FAVS_VIEW_CONF="Favourites view"
 FLEXI_SEARCH_VIEW_CONF="Search view"
@@ -2305,17 +2289,19 @@ FLEXI_WORKFLOW_BASIC_CONF="Basic Workflow"
 FLEXI_CONTENT_LISTS_CONF="Content Lists"
 FLEXI_ITEMS_LIST_CREATION_CONF="Items List Creation"
 FLEXI_ITEM_FILTERING_CONF="Alpha-Index, Search, Filters"
-FLEXI_USED_IN_ITEM_VIEW_ONLY="Used in Item view only"
+FLEXI_CATEGORY_DATA="Category data"
 FLEXI_ITEM_VIEW="Item view"
 FLEXI_SINGLE_CONTENT="Single Content"
 FLEXI_CONTENT_LISTS="Content Lists"
+FLEXI_LISTS_CONF="Lists"
+FLEXI_LISTS_TEMPLATE_CONF="Lists: Template"
 FLEXI_LISTS_CATDATA_CONF="Lists: Category data"
 FLEXI_LISTS_ITEMDATA_CONF="Lists: Item data"
 FLEXI_LISTS_FILTERING_CONF="Lists: Filtering"
 FLEXI_LISTS_MARKUPS_CONF="Lists: Markups"
 FLEXI_LISTS_RSS_CONF="Lists: RSS"
-FLEXI_VIEWS_COMMON_CONF="Views: Common"
-FLEXI_VIEWS_SPECIFIC_CONF="Views: Specific"
+FLEXI_ALL_VIEWS_CONF="All views"
+FLEXI_OTHER_VIEWS_CONF="Other views"
 FLEXI_FIELD_MODULE_STYLE="Module chrome style <br/><small>module chrome defines container html/css to use</small>"
 FLEXI_FIELD_MODULE_STYLE_DESC="Set a module chrome style (container) for your module <br/><br/><b>NOTE:</b><br/>Joomla standard chrome styles are: rounded,none,table,horz,xhtml, <br/><br/><b>NOTE:</b><br/>Your Joomla Template may have more,<br/><br/>-- to <b>find these</b>, open file:<br/> PATH_TO_JOOMLA/templates/TEMPLATE_NAME/html/modules.php<br/><br/> and check for function names like:<br/> modChrome_STYLE()<br/> <b>STYLE</b> is the extra module chrome styles available ..."
 FLEXI_TAGS_DEFAULT_MENU_ITEMID="Default Menu Itemid<br/><small>for Tags View Default Configuration</small>"
@@ -2325,6 +2311,21 @@ FLEXI_FAVS_DEFAULT_MENU_ITEMID_DESC="Favourites links that do not originate from
 FLEXI_SEARCH_DEFAULT_MENU_ITEMID="Default Menu Itemid<br/><small>for Search View Default Configuration</small>"
 FLEXI_SEARCH_DEFAULT_MENU_ITEMID_DESC="Search links that do not originate from (a) a Search module or (b) a Search Menu Item, need to get a default configuration. <br/><br/>You can create a published Search Menu Item of public access level (and set it here), and in this menu item configure the search view default configuration to use for these search links"
 FLEXI_SELECT_MODULE="Select a Module"
+
+FLEXI_SUPPORTED_LIST_VIEWS="Category, Author items, My items, Multi-category view, Tags, Favourites"
+FLEXI_CONFIGURATION_VIA_MENU_ITEM_ONLY="Configuration via: MENU item only"
+
+FLEXI_HOW_TO_CUSTOMIZE_LAYOUT_CONF="For the purpose of customizing <br/>  - displayed fields <br/>  - layout specific parameters <br/>  - layout's HTML/CSS files, <br/> please edit the <b>category</b> layout of each template in the templates manager"
+FLEXI_USE_CATEGORY_FOR_VIEWS="Use category view for <br/><small>(allows using 'TEMPLATES' and 'LIST' configuration)</small>"
+
+FLEXI_DEFAULT_CATEGORY_LAYOUT="Category layout"
+FLEXI_DEFAULT_CATEGORY_LAYOUT_DESC="The category layout of the selected template will be used unless the category or content listing view overrides it"
+
+FLEXI_CATEGORY_LAYOUT_SELECTOR="Layout selector"
+FLEXI_CATEGORY_LAYOUT_SELECTOR_DESC="Enable to allow frontend user to switch item list (category) layout. NOTE: selecting none here will disable the selector"
+
+FLEXI_ALLOWED_CATEGORY_LAYOUT="Allowed layouts"
+FLEXI_ALLOWED_CATEGORY_LAYOUT_DESC="These are the allowed templates for the layout selector, every category or view may override these"
 
 FLEXI_USE_LANGUAGE_COLUMN="Use 'language' Column"
 FLEXI_USE_LANGUAGE_COLUMN_TIP="Add to your file a column with name 'language' and with values e.g. en-GB"
