+ Added (yet) unused options for custom field ordering for the frontend user, and changed descriptions for layout selector options, there will be 2 parameters: 'displayed' category layout options and 'allowed' category layout options, also default display for new installations will be to render tags and favs via category view

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -679,6 +679,7 @@ FLEXI_SELECT_A_CATEGORY="Select a Category"
 FLEXI_SELECT_A_SECTION_DESC="Select the content section you wish to use for FLEXIcontent. You can either use an existing section or create a new one."
 FLEXI_SELECT_A_SECTION="Select a section"
 FLEXI_SHOW="Show"
+FLEXI_DISPLAY="Display"
 FLEXI_LINK_TO_FE="Link to frontend"
 FLEXI_LINK_TO_BE="Link to backend"
 FLEXI_SHOW_WITH_LABEL="Show with label"
@@ -1787,7 +1788,7 @@ FLEXI_SHOW_INTROTXT_DESC="Introductory Text is used to present the content in <b
 
 ; theme selection
 FLEXI_TYPE_DEFAULT="Type Default"
-FLEXI_CHOOSE_ALLOWED_TYPEITEMS_LAYOUT="Allowed Item Layouts<br/><small>-- Blank allows all -- </small>"
+FLEXI_CHOOSE_ALLOWED_TYPEITEMS_LAYOUT="Allowed Item Layouts<br/><small>-- none allows all -- </small>"
 FLEXI_CHOOSE_ALLOWED_TYPEITEMS_LAYOUT_DESC="Select the allowed item layouts for this Item Type <br/><br/><b>NOTE:</b> Every template has one item layout, so this list contains template names<br/><br/><b>NOTE:</b> This is especially useful if you want to allow <b>layout</b> selection for frontend users, but also for reducing the size of the selection list"
 FLEXI_USING_CONTENT_TYPE_LAYOUT="Using Template Layout defined by <b>Content Type</b><br/>Content Type Layout: -- <b>%s</b> --"
 FLEXI_RECOMMEND_CONTENT_TYPE_LAYOUT="<b>NOTE:</b><br/>All items use the <b>item layout</b> defined in the item's Content Type configuration, but you can select above, to use a different item layout for this content<br/><br/> Nevertheless, it is recommended to avoid overriding the item layout configuration for individual (content) items.<br/><br/>"
@@ -2315,17 +2316,27 @@ FLEXI_SELECT_MODULE="Select a Module"
 FLEXI_SUPPORTED_LIST_VIEWS="Category, Author items, My items, Multi-category view, Tags, Favourites"
 FLEXI_CONFIGURATION_VIA_MENU_ITEM_ONLY="Configuration via: MENU item only"
 
-FLEXI_HOW_TO_CUSTOMIZE_LAYOUT_CONF="For the purpose of customizing <br/>  - displayed fields <br/>  - layout specific parameters <br/>  - layout's HTML/CSS files, <br/> please edit the <b>category</b> layout of each template in the templates manager"
+FLEXI_HOW_TO_CUSTOMIZE_LAYOUT_CONF="In order to customize: <br/>  - displayed fields <br/>  - layout specific parameters <br/>  - layout's HTML/CSS files <br/><br/> please edit the <b>category</b> layout of each template in the templates manager"
 FLEXI_USE_CATEGORY_FOR_VIEWS="Use category view for <br/><small>(allows using 'TEMPLATES' and 'LIST' configuration)</small>"
 
-FLEXI_DEFAULT_CATEGORY_LAYOUT="Category layout"
-FLEXI_DEFAULT_CATEGORY_LAYOUT_DESC="The category layout of the selected template will be used unless the category or content listing view overrides it"
+FLEXI_DEFAULT_CATEGORY_LAYOUT="Default category layout"
+FLEXI_DEFAULT_CATEGORY_LAYOUT_DESC="The choosen category layout of the selected template will be used, unless the category / content listing view / URL overrides it"
 
-FLEXI_CATEGORY_LAYOUT_SELECTOR="Layout selector"
-FLEXI_CATEGORY_LAYOUT_SELECTOR_DESC="Enable to allow frontend user to switch item list (category) layout. NOTE: selecting none here will disable the selector"
+FLEXI_NO_USE_MENU_BASED_ONLY="No, use menu-based only"
+FLEXI_RENDER_VIA_CAT_VIEW_NOTES="Enable this to create category-based links, thus being able to use 'category' layouts and other 'item list' configuration like advanced filtering, etc, and also makes possible to limit to specific categories"
+FLEXI_CATEGORY_LAYOUT_SWITCHER="Layout switcher"
+FLEXI_CATEGORY_LAYOUT_SWITCHER_DESC="Enable to allow frontend user to switch item list (category) layout. <br/><br/>NOTE: selecting zero allowed templates, will disable the switcher"
+FLEXI_CATEGORY_LAYOUT_SWITCHER_DISPLAY_MODE="Appearance"
+FLEXI_CATEGORY_LAYOUT_SWITCHER_DISPLAY_MODE_DESC="Select how the layout switcher will be displayed"
 
-FLEXI_ALLOWED_CATEGORY_LAYOUT="Allowed layouts"
-FLEXI_ALLOWED_CATEGORY_LAYOUT_DESC="These are the allowed templates for the layout selector, every category or view may override these"
+FLEXI_ORDER_OPTIONS_CUSTOM_1ST="Custom Order (Level 1) <br/><small>allowed to frontend user</small>"
+FLEXI_ORDER_OPTIONS_CUSTOM_2ND="Custom Order (Level 2) <br/><small>allowed to frontend user</small>"
+FLEXI_ORDER_OPTIONS_CUSTOM_DESC="Please enter the custom fields that you wish to allow as ordering options. <br/><br/>Format is (use comma seperate multiple cases): <br/> fieldid:[alpha|num]:[asc|desc] <br/><br/>e.g.<br/> 45:num:desc, 57:num:asc, 61:alpha:asc"
+
+FLEXI_DISPLAYED_CATEGORY_LAYOUTS="Displayed layouts <br/><small>-- None displays none -- </small>"
+FLEXI_DISPLAYED_CATEGORY_LAYOUTS_DESC="These are the allowed templates for the layout selector <br/><br/><b>NOTE:</b> Every template has one category layout, so this list contains template names<br/><br/><b>NOTE:</b> This is especially useful if you want to allow <b>layout</b> selection for frontend users, but also for reducing the size of the selection list <br/><br/><b>NOTE:</b> Every category or view may override these"
+FLEXI_ALLOWED_CATEGORY_LAYOUTS="Allowed layouts <br/><small>-- None allows all -- </small>"
+FLEXI_ALLOWED_CATEGORY_LAYOUTS_DESC="These are the allowed templates via URL <br/><br/><b>NOTE:</b> Every template has one category layout, so this list contains template names<br/><br/><b>NOTE:</b> This is especially useful if you want to allow <b>layout</b> selection for frontend users, but also for reducing the size of the selection list <br/><br/><b>NOTE:</b> Every category or view may override these"
 
 FLEXI_USE_LANGUAGE_COLUMN="Use 'language' Column"
 FLEXI_USE_LANGUAGE_COLUMN_TIP="Add to your file a column with name 'language' and with values e.g. en-GB"
