+ Implemented flexible custom field ordering for the frontend ordering selector

--- a/site/language/en-GB/en-GB.com_flexicontent.ini
+++ b/site/language/en-GB/en-GB.com_flexicontent.ini
@@ -488,3 +488,6 @@ FLEXI_REQUESTED_CONTENT_OR_VIEW_NOT_FOUND="The request content or the requested 
 
 ; INACCESSIBLE data
 FLEXI_FIELD_NO_ACCESS="No Access"
+
+FLEXI_INCREASING="increasing"
+FLEXI_DECREASING="decreasing"
