--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -2331,7 +2331,7 @@ FLEXI_CATEGORY_LAYOUT_SWITCHER_DISPLAY_MODE_DESC="Select how the layout switcher
 
 FLEXI_ORDER_OPTIONS_CUSTOM_1ST="Custom Order (Level 1) <br/><small>allowed to frontend user</small>"
 FLEXI_ORDER_OPTIONS_CUSTOM_2ND="Custom Order (Level 2) <br/><small>allowed to frontend user</small>"
-FLEXI_ORDER_OPTIONS_CUSTOM_DESC="Please enter the custom fields that you wish to allow as ordering options. <br/><br/>Format is (use comma seperate multiple cases): <br/> fieldid:[alpha|num]:[asc|desc] <br/><br/>e.g.<br/> 45:num:desc, 57:num:asc, 61:alpha:asc"
+FLEXI_ORDER_OPTIONS_CUSTOM_DESC="Please enter the custom fields that you wish to allow as ordering options. <br/><br/>Format is (use comma seperate multiple cases): <br/> fieldid:[alpha|int|decimal|date]:[asc|desc] <br/>or<br/>fieldid:[alpha|int|decimal|date]:[asc|desc]:language_string <br/><br/>e.g.<br/> 45:num:desc, 57:decimal:asc:price_lowest, 61:alpha:asc"
 
 FLEXI_DISPLAYED_CATEGORY_LAYOUTS="Displayed layouts <br/><small>-- None displays none -- </small>"
 FLEXI_DISPLAYED_CATEGORY_LAYOUTS_DESC="These are the allowed templates for the layout selector <br/><br/><b>NOTE:</b> Every template has one category layout, so this list contains template names<br/><br/><b>NOTE:</b> This is especially useful if you want to allow <b>layout</b> selection for frontend users, but also for reducing the size of the selection list <br/><br/><b>NOTE:</b> Every category or view may override these"
