--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -1959,6 +1959,10 @@ FLEXI_PARAMETERS_CAT_PEERCATS_INFO_OPTIONS_OVERRIDE="<b style='color:darkgreen;'
 
 FLEXI_SELECT_MYITEMS_CATEGORY="Limit user's items to a category"
 FLEXI_SELECT_MYITEMS_CATEGORY_DESC="Optionally limit the displayed user's items to a specific category"
+FLEXI_SELECT_FAVS_CATEGORY="Limit favoured items to a category"
+FLEXI_SELECT_FAVS_CATEGORY_DESC="Optionally limit the displayed favoured items to a specific category"
+FLEXI_SELECT_TAGS_CATEGORY="Limit tagged items to a category"
+FLEXI_SELECT_TAGS_CATEGORY_DESC="Optionally limit the displayed tagged items to a specific category"
 FLEXI_CHOOSE_IMAGE_FOR_CATEGORY="Select an image for the category"
 
 ; Item state management
