--- a/admin/language/en-GB/en-GB.com_flexicontent.sys.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.sys.ini
@@ -22,8 +22,8 @@ FLEXICONTENT_MAIN_NODE_TIP="Please choose a layout for the directory view"
 FLEXICONTENT_MAIN_TIP="Directory view"
 FLEXICONTENT_MAIN="Directory"
 FLEXICONTENT_PROJECT="FLEXIcontent Project"
-FLEXICONTENT_TAGS_DESC="Link to Items assigned to a specific Tag"
-FLEXICONTENT_TAGS_TIP="Link to Items assigned to a specific Tag"
+FLEXICONTENT_TAGS_DESC="Lists all items assigned to a specific Tag"
+FLEXICONTENT_TAGS_TIP="Items assigned to a specific Tag"
 FLEXICONTENT_TAGS="Tag"
 FLEXICONTENT_ITEM_SUBMISSION_DESC="This menu allows users to submit content in frontend."
 FLEXICONTENT_ITEM_SUBMISSION_TIP="Select this option if you want to create a direct menu link to the ITEM submission form"
@@ -41,6 +41,17 @@ FLEXICONTENT_MYITEMS="My Items"
 FLEXICONTENT_MCATS_DESC="List items (and category information) of <b>multiple categories</b>.<br> <small>Parameters used are (in order of override): (a) global component parameters, (b) current menu parameters for category -view- (always)</small>"
 FLEXICONTENT_MCATS_TIP="List items and category information of multiple categories"
 FLEXICONTENT_MCATS="Categories"
+
+FLEXICONTENT_FAVOURITES_CATVIEW_DESC="Select this screen if you want to create a direct link in your menu to the FLEXIcontent Favourites of the user who access this screen."
+FLEXICONTENT_FAVOURITES_CATVIEW_TIP="The User Favourites, (*) using a template-based category-like view"
+FLEXICONTENT_FAVOURITES_CATVIEW="Favoured Items"
+
+FLEXICONTENT_TAGS_CATVIEW_DESC="Display items assigned to a specific Tag, using a template-based category-like view"
+FLEXICONTENT_TAGS_CATVIEW_TIP="Items assigned to a specific Tag, (*) using a template-based category-like view"
+FLEXICONTENT_TAGS_CATVIEW="Tagged Items"
+
+FLEXICONTENT_SEARCH_TIP="Search view"
+FLEXICONTENT_SEARCH="Search"
 
 ;submenu
 FLEXI_DASHBOARD="Dashboard"
