+ Implemented frontend category layout switcher as select drop-down, TODO: display as radioimage

--- a/site/language/en-GB/en-GB.com_flexicontent.ini
+++ b/site/language/en-GB/en-GB.com_flexicontent.ini
@@ -491,3 +491,5 @@ FLEXI_FIELD_NO_ACCESS="No Access"
 
 FLEXI_INCREASING="increasing"
 FLEXI_DECREASING="decreasing"
+FLEXI_LAYOUT="Layout"
+FLEXI_LAYOUT_INFO="Switch to between available layouts"
