# Frontend item form: allowed disabling display of language associations, allowed autopublish parameter via submit menu item to display/edit publication details (e.g. publish down) if these are enabled, also added warning message about main category being empty because of current content type does not allow the configured categories or user cannot use categories of the content type

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -1268,6 +1268,7 @@ FLEXICONTENT_ITEM_SUBMISSION="Item submission form"
 FLEXI_MENU_FORM_TYPE="Form Type"
 FLEXI_MENU_FORM_TYPE_DESC="Either set a specific Form Type that you wish to display, OR let your submitting user to select out of the Content Types that are allowed to him/her via ACL 'create items' privilege (please set this in Content Type manager)"
 FLEXI_MENU_ALLOW_CONTENT_TYPE_SELECTION="Allow User Selection (uses ACL)"
+FLEXI_YES_WITHOUT_ASSOCS="Yes, without associations"
 
 FLEXI_MENU_USE_META="Use Metadata"
 FLEXI_MENU_USE_META_DESC="Allow the user to enter the Metadata"
