--- a/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
+++ b/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
@@ -364,7 +364,7 @@ FLEXI_MOD_FORCE_MENU_ITEMID_DESC="This option will force all links to items to u
 FLEXI_MOD_CURRENT="Current"
 FLEXI_MOD_SPECIFIC="Specific"
 FLEXI_MOD_SPECIFIC_MENU_ITEMID="Specific menu itemid"
-FLEXI_MOD_SPECIFIC_MENU_ITEMID_DESC="Enter the menu itemid to use for item links"
+FLEXI_MOD_SPECIFIC_MENU_ITEMID_DESC="Enter the menu itemid to use for item links <br/><br/> NOTE: menu item must point to any FLEXIcontent view, otherwise SEF links will not work, thus it will be ignored if it does not point to FLEXIcontent view"
 
 FLEXI_FEATURED_ITEMS_SCOPE="Featured Items Scope <small>(Joomla's Featured Flag)</small>"
 FLEXI_FEATURED_ITEMS_DESC="Select to display (a) ALL items -OR- (b) normal items only (exclude) -OR- (c) featured items only (include)"
