--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -1202,7 +1202,7 @@ FLEXI_CUSTOM_TITLE="Custom &lt;&zwnj;title&zwnj;&gt;"
 FLEXI_CUSTOM_TITLE_DESC="You can customize the content of the title tag. This is very useful for specific SEO strategies. If left blank, the page title or the item title will be used."
 FLEXI_SEO_CONF="SEO parameters"
 FLEXI_ADDCAT_PAGETTITLE="Category to &lt;&zwnj;title&zwnj;&gt;"
-FLEXI_ADDCAT_PAGETTITLE_DESC="Add the category name to the title tag"
+FLEXI_ADDCAT_PAGETTITLE_DESC="Add the category name to the title tag on the left or on the right of the item name"
 FLEXI_FIELDS_COPY_FAILED="Copy failed!!!"
 FLEXI_FIELDS_COPY_SUCCESS="%s fields were successfully copied."
 FLEXI_FIELDS_CORE_FIELDS_NOT_COPIED="%s core fields were excluded (You cannot copy the core fields!)"
@@ -3282,3 +3282,6 @@ FLEXI_EXPERIMENTAL_DESC="Experimental features are only for testing, and getting
 FLEXI_REDIRECT_ARTICLE_VIEW="Joomla article view"
 FLEXI_REDIRECT_ARTICLE_VIEW_DESC="By default joomla article view will be redirected to FLEXIcontent item view. <br/><br/>If redirection is disabled, then it will allow the item to be viewed by both the Joomla article view and the FLEXIcontent item view, thus e.g. article links in Joomla category view will not be redirected <br/><br/>  NOTE: (compatibility) this is by default allowed for 'article' Content <b>type</b>, but you can allow other types too"
 FLEXI_REDIRECT_TO_ITEM_VIEW="Redirect to FC item view"
+
+FLEXI_ON_LEFT="On Left"
+FLEXI_ON_RIGHT="On Right"
