^ Some placement restructe for backend layout edit view, moved information data into a TAB and moved "insert template code" buttons

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -460,9 +460,11 @@ FLEXI_WEBSITE="Website"
 FLEXI_TEMPLATE_DELETE_CONFIRM="TAKE CARE!!! You are about to delete a template folder. All the files inside will be permanently deleted!"
 FLEXI_FIELDS_PLACEMENT="Fields placement"
 
+; Layout editing enhancements
 FLEXI_EDIT_LAYOUT_FILES="Edit files"
 FLEXI_NO_FILE_LOADED="No file loaded"
 FLEXI_LAYOUT_FILES="Layout files"
+FLEXI_INSERT_TEMPLATE_CODE="Insert template code"
 FLEXI_COPY_CODE="Please copy (Ctrl+C) and paste (Ctrl+V), at the desired place inside your template file"
 FLEXI_ADD_FIELD_POSITION_XML="New position for displaying fields"
 FLEXI_ADD_PARAMETER_TEXT_XML="New parameter: Text"
@@ -3186,8 +3188,11 @@ FLEXI_RECOMMENDED="Recommended"
 FLEXI_ALLOW="Allow"
 FLEXI_ALLOWED="Allowed"
 FLEXI_REDIRECTED="Redirected"
+FLEXI_ON_LEFT="On Left"
+FLEXI_ON_RIGHT="On Right"
 
 FLEXI_BASIC_DISPLAY="Basic Display"
+FLEXI_INFORMATION="Information"
 
 FLEXI_DISPLAY_FEATURED_ITEMS="Include / exclude items marked as featured"
 FLEXI_DISPLAY_FEATURED_ITEMS_DESC="Some of the category items are flagged as featured. Select here to include / exclude these from the item list"
@@ -3282,6 +3287,3 @@ FLEXI_EXPERIMENTAL_DESC="Experimental features are only for testing, and getting
 FLEXI_REDIRECT_ARTICLE_VIEW="Joomla article view"
 FLEXI_REDIRECT_ARTICLE_VIEW_DESC="By default joomla article view will be redirected to FLEXIcontent item view. <br/><br/>If redirection is disabled, then it will allow the item to be viewed by both the Joomla article view and the FLEXIcontent item view, thus e.g. article links in Joomla category view will not be redirected <br/><br/>  NOTE: (compatibility) this is by default allowed for 'article' Content <b>type</b>, but you can allow other types too"
 FLEXI_REDIRECT_TO_ITEM_VIEW="Redirect to FC item view"
-
-FLEXI_ON_LEFT="On Left"
-FLEXI_ON_RIGHT="On Right"
