^ Added *.sys.ini files for the modules, adding language name and description strings. Also the name of modules will now be "FLEXIcontent - *" to be easier to find when creating a new module

--- a/modules/mod_flexifilter/languages/en-GB.mod_flexifilter.ini
+++ b/modules/mod_flexifilter/languages/en-GB.mod_flexifilter.ini
@@ -1,3 +1,10 @@
+;@version 1.2 $Id: en-GB.mod_flexifilter.ini
+;@package Joomla
+;@subpackage FLEXIcontent Filtering Module
+;@copyright (C) 2009 Emmanuel Danan
+;@license http://www.gnu.org/copyleft/gpl.html GNU/GPL
+
+; Note : All ini files need to be saved as UTF-8
 
 ; CONFIGURATION PARAMETER GROUPS
 FLEXI_BASIC_CONFIGURATION="Basic Configuration"
