--- a/site/language/en-GB/en-GB.com_flexicontent.ini
+++ b/site/language/en-GB/en-GB.com_flexicontent.ini
@@ -103,6 +103,7 @@ FLEXI_NEW="New item"
 
 ; added 1.5.3 stable
 FLEXI_PLEASE_SELECT="Please select"
+FLEXI_FIELD_NO_DATA_FOUND="No data found"
 FLEXI_REMOVE_FILE="Remove"
 FLEXI_REMOVE_VALUE="Remove"
 FLEXI_NO_VALUE="No value"
