# Added new by reference parameter to stripandcut helper function, to indicate length of text before cutting but after stripping the HTML tags

--- a/site/templates/blog/language/en-GB/en-GB.ini
+++ b/site/templates/blog/language/en-GB/en-GB.ini
@@ -6,3 +6,4 @@ FLEXI_HTML_MODE="Choose HTML version"
 FLEXI_HTML_MODE_DESC="Choose between xhtml or html5."
 FLEXI_XHTML="xhtml"
 FLEXI_HTML5="html5"
+FLEXI_YES_IF_NEEDED="Yes, if needed"
