# Fixed issue with unused default first option text in filter parameter of fields for the display case as drop down select

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -2574,6 +2574,8 @@ FLEXI_FIELD_PROMPT_TEXT="Prompt Text <br/><small>(e.g. Select)</small>"
 FLEXI_FIELD_PROMPT_TEXT_DESC="Custom prompt text <br/><br/><b>NOTE</b>: This text is language-filtered so you can enter a language replacable string"
 FLEXI_FIELD_ADD_FIRST_OPTION="Add a default Option"
 FLEXI_FIELD_ADD_FIRST_OPTION_DESC="Enable to add a default first option to the Drop-Down Select"
+FLEXI_FIELD_CUSTOMIZE_FILTER_FIRST_OPTION="Customize default option (all values)"
+FLEXI_FIELD_CUSTOMIZE_FILTER_FIRST_OPTION_DESC="Enable to customize the first option of the filter (=all values) . <br/> NOTE: this is used only in the case of Drop-Down Select, and also if field label is not placed inside the selector"
 FLEXI_FIELD_FIRST_OPTION_TEXT="Default Option Text <br/><small>(e.g. Select Color)</small>"
 FLEXI_FIELD_FIRST_OPTION_TEXT_DESC="Text of first option of the Drop-Down Select e.g. 'Select Color' etc. <br/><br/><b>NOTE</b>: This option has no value <br/><br/><b>NOTE</b>:  This text is language-filtered so you can enter a language replacable string"
 FLEXI_FIELD_SINGLE_VALUE_PREFIX_TEXT="Prefix text of the value"
