# In FE item form configuration: fixed language selector being disabled for new items, if disabling language associations was selected, and also added option to default language parameter for using language of current author as preselected language in the selector, also increased size of category layout switcher radioimages to 48px

--- a/admin/language/en-GB/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB/en-GB.com_flexicontent.ini
@@ -1693,6 +1693,8 @@ FLEXI_MENU_DEFAULT_LANGUAGE_DESC="This is the language that will be pre-selected
 FLEXI_MENU_DISABLE_LANGUAGES="Disable languages"
 FLEXI_MENU_DISABLE_LANGUAGES_DESC="For example you may want to disable language 'ALL'"
 
+FLEXI_USE_AUTHOR_LANGUAGE="Use editor's Language"
+
 FLEXI_MENU_LANG_SELECTOR="Language selector"
 FLEXI_MENU_LANG_SELECTOR_DISPLAY_AS="Display as"
 FLEXI_MENU_LANG_SELECTOR_DISPLAY_AS_DESC="You can display it e.g. as drop-down select or radio buttons"
